<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.raxa</groupId>
    <artifactId>feroDiscordVoiceThing</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>1.3.8</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>[2.9.8,)</version>
        </dependency>      
        <dependency>
            <groupId>eu.mihosoft.jfx.scaledfx</groupId>
            <artifactId>scaledfx</artifactId>
            <version>0.3</version>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>central maven repo</id>
            <name>central maven repo https</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>
    <build>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/java/com/raxa/ferodiscordvoicething</directory>
                <includes>
                    <include>**/*.fxml</include>
                </includes>             
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/java/com/raxa/ferodiscordvoicething</directory>
                <includes>
                    <include>**/*.css</include>
                </includes>             
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/java/com/raxa/ferodiscordvoicething</directory>
                <includes>
                    <include>**/*.ttf</include>
                </includes>             
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.raxa.ferodiscordvoicething.Main</mainClass>
                        </manifest>
                    </archive>
                    <compilerVersion>1.8</compilerVersion>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.raxa.ferodiscordvoicething.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>Fero Indicator</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>